[tool.poetry]
name = "zamg"
version = "0.3.5"
description = "Asynchronous Python client for GeoSphere Austria (ZAMG) weather data."
authors = ["Daniel Gangl <killer007@gmx.at>"]
maintainers = ["Daniel Gangl <killer007@gmx.at>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/killer0071234/python-zamg"
repository = "https://github.com/killer0071234/python-zamg"
documentation = "https://github.com/killer0071234/python-zamg"
keywords = ["geosphere", "zamg", "api", "async", "client"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "zamg", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = ">=3.8.0"
async-timeout = "4.0.3"

[tool.poetry.dev-dependencies]
aresponses = "^2.1.5"
black = "^23.12"
blacken-docs = "^1.12.1"
coverage = {version = "^7.2", extras = ["toml"]}
flake8 = "^4.0.1"
flake8-docstrings = "^1.5.0"
isort = "^5.10.1"
mypy = "^1.3"
pre-commit = "^2.19.0"
pre-commit-hooks = "^4.2.0"
pylint = "^3.0.2"
pytest = "^8.0.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
yamllint = "^1.26.3"
pyupgrade = "^3.0.0"
flake8-simplify = "^0.21.0"
vulture = "^2.3"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^23.2.13"
flake8-builtins = "^2.0.0"
flake8-comprehensions = "^3.9.0"
flake8-eradicate = "^1.2.1"
flake8-markdown = "^0.3.0"
darglint = "^1.8.1"
safety = "^2.1.1"
codespell = "^2.1.0"
bandit = "^1.7.4"
types-cachetools = "^5.2.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/killer0071234/python-zamg/issues"
Changelog = "https://github.com/killer0071234/python-zamg/releases"

[tool.black]
target-version = ['py311']

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.coverage.run]
branch = true
source = ["zamg"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
platform = "linux"
python_version = 3.11

# flake8-mypy expects the two following for sensible formatting
show_column_numbers = true

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = false # thanks backoff :(
no_implicit_optional = true
no_implicit_reexport = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

# No incremental mode
cache_dir = "/dev/null"

[tool.pylint.MASTER]
load-plugins = [
  "pylint.extensions.bad_builtin",
  "pylint.extensions.code_style",
  "pylint.extensions.docparams",
  "pylint.extensions.docstyle",
  "pylint.extensions.empty_comment",
  "pylint.extensions.overlapping_exceptions",
  "pylint.extensions.typing",
]
ignore= [
  "tests"
]

[tool.pylint.BASIC]
good-names = [
    "_",
    "ex",
    "fp",
    "i",
    "id",
    "j",
    "k",
    "on",
    "Run",
    "T",
    "wv",
]

[tool.pylint."MESSAGES CONTROL"]
disable= [
    "too-few-public-methods",
    "duplicate-code",
    "format",
    "unsubscriptable-object",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length=88

[tool.pylint.DESIGN]
max-attributes=20

[tool.pytest.ini_options]
addopts = " --cov=src/. --cov-report=term-missing"

[tool.vulture]
min_confidence = 80
paths = ["src", "tests"]
verbose = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
